--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-ui-router": "~0.2.13",
     "bootstrap-sass-official": "~3.3.1",
     "angular-bootstrap": "0.12.x",
-    "angular": "~1.3.4"
+    "angular": "~1.3.4",
+    "angular-dragdrop": "~1.0.8"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
