--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
     "bootstrap-sass-official": "~3.3.1",
     "angular-bootstrap": "0.12.x",
     "angular": "~1.3.4",
-    "angular-dragdrop": "~1.0.8"
+    "angular-drag-and-drop-lists": "~1.2.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
