--- a/bower.json
+++ b/bower.json
@@ -13,13 +13,14 @@
     "bootstrap-sass-official": "~3.3.1",
     "angular-bootstrap": "0.12.x",
     "angular": "~1.3.4",
-    "angular-drag-and-drop-lists": "~1.2.0"
+    "angular-drag-and-drop-lists": "~1.2.0",
+    "famous-angular": "https://github.com/Famous/famous-angular.git#af184346b983418a60601b131591180468e14cde"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
   },
   "resolutions": {
     "jquery": "~2.1.1",
-    "angular": "~1.3.4"
+    "angular": "~1.3.8"
   }
 }
