--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "switchboard",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "gulp-download-atom-shell": "0.0.4",
+    "gulp-shell": "^0.2.11"
+  },
+  "main": "src/atom.js",
   "devDependencies": {
     "gulp": "~3.8.10",
     "gulp-autoprefixer": "~2.0.0",
